replace linq with stream